# cpp-parallel-factorial

./: .gitignore  CMakeLists.txt  README.md  default.nix  shell.nix
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
src/: CMakeLists.txt  main.cc  main.cpp  parallel_factorial.cpp  parallel_factorial.h
tests/: CMakeLists.txt  parallel_factorial.test.cpp  parallel_factorial_unittest.cc
